scrollbar fix

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -92,6 +92,7 @@ body {
     margin: 0;
     padding: 0;
     overflow-x: hidden;
+    overflow-y:hidden;
 }
 
 body::before {
